--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": " next dev",
-    "build": "next build",
+    "build": "tsc",
     "start": "next start",
     "lint": "next lint"
   },
@@ -25,8 +25,11 @@
     "react-query": "^3.39.3"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.13",
+    "@types/react": "18.3.12",
     "eslint": "^8",
     "eslint-config-next": "14.2.8",
-    "node-polyfill-webpack-plugin": "^4.0.0"
+    "node-polyfill-webpack-plugin": "^4.0.0",
+    "typescript": "^5.6.3"
   }
 }
